turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_e6acdd0c.js
(globalThis.TURBOPACK = globalThis.TURBOPACK || []).push([document.currentScript, {

"[project]/turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js [test] (ecmascript)": (function(__turbopack_context__) {

var { g: global, __dirname, m: module, e: exports } = __turbopack_context__;
{
const e = new Error("Could not parse module '[project]/turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js'");
e.code = 'MODULE_UNPARSEABLE';
throw e;}}),
}]);